[B]1.0.4[/B]
- Updated language files from Transifex
- Bugfix added return to video playlist command
- Returned Hard Floor Image to all screens except Home
- Add Option to Auto Hide Home Submenus
- Add Option to Hide System Power Button
- Added User Watched/New Banner Option to Poster View
- Watched Symbol made bigger & brighter + toggle option to hide

[B]1.0.3[/B]
- Added Info Stats Bar
- Added Home Fanart to Recently Added Lists
- Added Roboto-Bold-Caps font by uNiversal
- Changed Floor to floor.png by uNiversal
- Changed Skin Default Background
- Added Home Support for Music Videos
- Added Wider Home Menu Labels
- Added Logos to MediaInfoView3
- Added ExtraFanArt to MediaInfoView

[B]1.0.2[/B]
- Added Live CD Case as default Music Viz Background
- Added Artist Slideshow Support in Music Viz (New Requirement script.artistslideshow)
- Added Artist Bio to Music OSD
- Added Extra Fanart Option in Music Viz
- Added Animate Fanart Option in Music Viz
- Added Diffuse FanArt Option for Opaque Music Viz
- Added CD Art Option to Music Viz
- Added Playlist Button to MusicOSD 

[B]1.0.1[/B]

- Added Delay to Info Popup FanArt Media View
- Added Large Font
- Added Kiosk Mode
- Returned Skin Settings to Settings Menu
- Added QWERTY Keyboard
- BugFix Duplicate Lang Strings

[B]1.0.0[/B]

- Initial Mod of Confluence
- Added Custom Main Menu
- Added Individual Backgrounds