@@ -6,6 +6,7 @@
 - Add Option to Hide System Power Button
 - Added User Watched/New Banner Option to Poster View
 - Watched Symbol made bigger & brighter + toggle option to hide
+- Tweaked GlobalSearch visible options could help on Pi
 
 [B]1.0.3[/B]
 - Added Info Stats Bar
